-Icons for blogs -App title in menu bar -Correct styling for full page width on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -16,7 +16,7 @@
 
 .App-intro {
   font-size: large;
-}
+} */
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
